--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "homepage": "https://eevgenushka.github.io/mesto-react/",
   "eslintConfig": {
     "extends": [
       "react-app",
